// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`baseSelectorType.vue renders correctly with custom widthSelect 1`] = `
<div
  class="inner-container"
>
  <vs-select-stub
    autocomplete="true"
    color="primary"
    icon="keyboard_arrow_down"
    iconclear="close"
    iconpack="material-icons"
    label=""
    nodata="data no available"
    width="800px"
  >
    <vs-select-item-stub
      class="selectStyle"
      text="Mareógrafo"
      value="[object Object]"
    />
    <vs-select-item-stub
      class="selectStyle"
      text="Boya de costa"
      value="[object Object]"
    />
    <vs-select-item-stub
      class="selectStyle"
      text="Boya Station"
      value="[object Object]"
    />
    <vs-select-item-stub
      class="selectStyle"
      text="Restringida"
      value="[object Object]"
    />
    <vs-select-item-stub
      class="selectStyle"
      text="Virtual Hindcast"
      value="[object Object]"
    />
  </vs-select-stub>
</div>
`;

exports[`baseSelectorType.vue renders correctly with label 1`] = `
<div
  class="inner-container"
>
  <vs-select-stub
    autocomplete="true"
    color="primary"
    icon="keyboard_arrow_down"
    iconclear="close"
    iconpack="material-icons"
    label="Boyas"
    nodata="data no available"
    width="400px"
  >
    <vs-select-item-stub
      class="selectStyle"
      text="Mareógrafo"
      value="[object Object]"
    />
    <vs-select-item-stub
      class="selectStyle"
      text="Boya de costa"
      value="[object Object]"
    />
    <vs-select-item-stub
      class="selectStyle"
      text="Boya Station"
      value="[object Object]"
    />
    <vs-select-item-stub
      class="selectStyle"
      text="Restringida"
      value="[object Object]"
    />
    <vs-select-item-stub
      class="selectStyle"
      text="Virtual Hindcast"
      value="[object Object]"
    />
  </vs-select-stub>
</div>
`;

exports[`baseSelectorType.vue renders correctly with lastActiveItem selected 1`] = `
<div
  class="inner-container"
>
  <vs-select-stub
    autocomplete="true"
    color="primary"
    icon="keyboard_arrow_down"
    iconclear="close"
    iconpack="material-icons"
    label=""
    nodata="data no available"
    value="[object Object]"
    width="400px"
  >
    <vs-select-item-stub
      class="selectStyle"
      text="Mareógrafo"
      value="[object Object]"
    />
    <vs-select-item-stub
      class="selectStyle"
      text="Boya de costa"
      value="[object Object]"
    />
    <vs-select-item-stub
      class="selectStyle"
      text="Boya Station"
      value="[object Object]"
    />
    <vs-select-item-stub
      class="selectStyle"
      text="Restringida"
      value="[object Object]"
    />
    <vs-select-item-stub
      class="selectStyle"
      text="Virtual Hindcast"
      value="[object Object]"
    />
  </vs-select-stub>
</div>
`;

exports[`baseSelectorType.vue renders correctly with the default values 1`] = `
<div
  class="inner-container"
>
  <vs-select-stub
    autocomplete="true"
    color="primary"
    icon="keyboard_arrow_down"
    iconclear="close"
    iconpack="material-icons"
    label=""
    nodata="data no available"
    width="400px"
  >
    <vs-select-item-stub
      class="selectStyle"
      text="Mareógrafo"
      value="[object Object]"
    />
    <vs-select-item-stub
      class="selectStyle"
      text="Boya de costa"
      value="[object Object]"
    />
    <vs-select-item-stub
      class="selectStyle"
      text="Boya Station"
      value="[object Object]"
    />
    <vs-select-item-stub
      class="selectStyle"
      text="Restringida"
      value="[object Object]"
    />
    <vs-select-item-stub
      class="selectStyle"
      text="Virtual Hindcast"
      value="[object Object]"
    />
  </vs-select-stub>
</div>
`;
